Tree grid alignment fixes (#1884)
+ Use 'em' based `--xh-grid-tree-indent` var to account for different sizing modes
+ Use same `--xh-grid-tree-indent` var for both group indents and leaf indents
+ Use fixed width icon
+ Control tree column left padding, adjusting according to `--xh-grid-tree-indent`

--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -113,7 +113,8 @@ body {
   --xh-grid-pinned-column-border-color: var(--grid-pinned-column-border-color, #{mc('grey', '300')});
   --xh-grid-summary-row-border-color: var(--grid-summary-row-border-color, var(--xh-grid-border-color));
   --xh-grid-text-color: var(--grid-text-color, var(--xh-text-color));
-  --xh-grid-tree-indent-px: var(--grid-tree-indent-px, var(--xh-pad-double-px));
+  --xh-grid-tree-indent: var(--grid-tree-indent, 1.2em);
+  --xh-grid-tree-icon-px: var(--grid-tree-icon-px, 10px);
 
   // Large Grid
   --xh-grid-large-cell-lr-pad: var(--grid-large-cell-lr-pad, 12);
@@ -400,7 +401,6 @@ body.xh-mobile {
   --xh-grid-line-height: var(--grid-line-height, 30);
   --xh-grid-compact-font-size: var(--grid-compact-font-size, 13);
   --xh-grid-compact-line-height: var(--grid-compact-line-height, 26);
-  --xh-grid-tree-indent-px: var(--grid-tree-indent-px, var(--xh-pad-half-px));
 
   // Fonts
   --xh-font-size: var(--font-size, 15);
